syntax = "proto3";

package pb;

option go_package = "../pb";

service  message{
}

// 定义消息类型枚举
enum MessageType {
    UNKNOWN = 0;
    COMMAND = 1;
    PROXY_SESSION_CREATE = 2;
    PROXY_SESSION_DATA = 3;
    PROXY_SESSION_CLOSE = 4;
}

enum CommandType {
    INVALID_COMMAND = 0;
    DOWNLOAD_IMAGE = 1;
    DOWNLOAD_TASK_DELETE = 2;
    DOWNLOAD_TASK_LIST = 3;
    DOWNLOAD_TASK_GET = 4;
    AUTH = 5;
}


// 定义命令消息体
message Command {
    CommandType type = 1;
    bytes data = 2;
}

// 目标地址
message DestAddr {
    string network = 1;
    string addr = 2;
}


// 定义通用消息体
message Message {
    MessageType type = 1;
    string session_id = 2;
    bytes payload = 3;
}

message CmdDownloadImageRequest {
    string url = 1;
    string md5 = 2;
    string path = 3;
}


message CmdDownloadImageResponse {
    bool success =1;
    string err_msg =2;
    string task_id =3;
}

message DownloadTask {
    string id = 1;
    string url = 2;
    string md5 = 3;
    string path = 4;
    int64 total_size = 5;
    int64 download_size = 6;
    bool running = 7;
    bool success = 8;
    string err_msg = 9;
}

message CmdDownloadTaskListResponse {
    repeated DownloadTask tasks = 1;
}


message CmdDownloadTaskDeleteRequest {
    string task_id = 1;
}

message CmdDownloadTaskDeleteResponse {
    bool success =1;
    string message =2;
}

message CmdDownloadTaskGetRequest{
    string task_id = 1;
}

message CmdDownloadTaskGetResponse{
    bool success =1;
    string err_msg =2;
    DownloadTask task =3;
}

message CmdAuthSSHAndMultipassRequest {
    bytes ssh_pub_key = 1;
    bytes multipass_cert = 2;
}

message CmdAuthSSHAndMultipassResponse {
    bool success =1;
    string err_msg =2;
}